fix problem when render product views on small desktop screens

--- a/client/assets/stylesheets/components/company/_company-profile-page.sass
+++ b/client/assets/stylesheets/components/company/_company-profile-page.sass
@@ -7,13 +7,9 @@ $color-orange: #e36307
 
 .company.profile.show
   .desktop-version
-    display: inline
-
     .row
       margin: 0
 
-  .mobile-version
-    display: none
 
   .see-all-tags-container
     display: none
@@ -150,12 +146,7 @@ $color-orange: #e36307
       border-color: $color-darkred
 
     #company-main-info-container
-      .desktop-version
-        display: none
-
       .mobile-version
-        display: block
-
         .section
           margin-top: 30px
           border: solid 1px $grey
