--- a/client/assets/stylesheets/components/products/_show-products-page.sass
+++ b/client/assets/stylesheets/components/products/_show-products-page.sass
@@ -7,13 +7,6 @@
     margin-left: 0
     margin-right: 0
 
-  .desktop-version
-    display: block
-
-
-  .mobile-version
-    display: none
-
   .title
     .name
       font-size: 20px
@@ -254,12 +247,7 @@
         height: auto
         padding: 20px
 
-    .desktop-version
-      display: none
-
     .mobile-version
-      display: block
-
       & > .links
         display: flex
         align-items: center
